# log-analyzer

./: .gitignore  Cargo.toml  LICENSE
collector/: Cargo.toml  README.md
collector/src/: file_watcher.rs  main.rs
server/: Cargo.toml
server/src/: config.rs  index_interface.rs  main.rs  web_interface.rs
server/web/: index.html
src/: index_interface.rs  main.rs
transient-types/: Cargo.toml
transient-types/src/: lib.rs
