[package]
name = "log-analyzer-collector"
version = "0.1.0"
authors = ["Mark Nefedov <contact@marknefedov.dev>"]
edition = "2018"
repository = "https://github.com/markusgod/log-analyzer"
description = "Collects logs from target machines and sends back to server"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4"
tokio = { version = "1", feaures = ["macro", "net", "sync"] }
regex = "1.5"
log-analyzer-transient-types = { version = "0.1", path = "../transient-types"}
