[package]
name = "log-analyzer-collector"
version = "0.1.1"
authors = ["Mark Nefedov <contact@marknefedov.dev>"]
edition = "2018"
repository = "https://github.com/markusgod/log-analyzer"
description = "Collects logs from target machines and sends back to server"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4"
tokio = { version = "1", features = ["full"] }
regex = "1.5"
tracing = "0.1"
tracing-subscriber = "0.2"
serde = "1.0"
toml = "0.5"
tokio-util = { version = "0.6", features = ["codec"] }
tokio-serde = { version = "0.8",  features = ["cbor"] }
futures = "0.3"
log-analyzer-transient-types = { version = "0.1", path = "../transient-types"}
