[package]
name = "log-analyzer-server"
version = "0.1.0"
authors = ["Mark Nefedov <contact@marknefedov.dev>"]
edition = "2018"
repository = "https://github.com/markusgod/log-analyzer"
description = "Types shared between crates, and used in serialization"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tantivy = "0.14"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
anyhow = "1.0"
parking_lot = "0.11"
log-analyzer-transient-types = { version = "0.1", path = "../transient-types"}