[package]
name = "log-analyzer-server"
version = "0.1.2"
authors = ["Mark Nefedov <contact@marknefedov.dev>"]
edition = "2018"
repository = "https://github.com/markusgod/log-analyzer"
description = "Indexes and stores log data"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tantivy = "0.14"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
anyhow = "1.0"
parking_lot = "0.11"
tokio-util = { version = "0.6", features = ["codec"] }
tokio-serde = { version = "0.8",  features = ["cbor"] }
futures = "0.3"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.2"
warp = "0.3"
rsyslog = "0.1"
log-analyzer-transient-types = { version = "0.1", path = "../transient-types"}
